Config now restarts, not closed application. Cleaned up code.